# liblz2k

./: CMakeLists.txt  README.md
demo/: demo.cpp
include/lz2k/: LZ2K.h
src/: CMakeLists.txt  LZ2K.cpp
